# cnaas-nms

./: .git-blame-ignore-revs  .gitignore  .jenkins.yaml  .oktetodeployignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile1  LICENSE.txt  README.md  alembic.ini  okteto.yaml  okteto2.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-toplevel-cmd.sh  requirements.txt  setup.cfg  setup.py  variables.tf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: run-unit-tests.yml
.gitlab/helm/: okteto-values.yaml
alembic/: env.py
alembic/versions/: 1327fb92d384_add_config_hash_for_devices.py  2f9faee221a7_add_ipv6_gw_field_to_mgmtdomain.py  395427a732d6_add_aborted_state_for_jobs.py  5aa2593e147a_save_change_score_in_separate_column_.py  65b83c197420_move_job_table_to_postgres_change_.py  6627b128bd5c_added_port_field.py  6c6bec879fa8_add_joblock_database.py  8a635012afa7_add_new_interface_config_types.py  922589188efe_add_columns_for_dist_switch_vxlan_fabric.py  9478bbaf8010_add_reservedip_table.py  9d01bce3c835_add_job_status_aborting_and_start_.py  a3f3bc390462_alembic_start.py  adcce7d9baaa_add_device_secondary_management_ip_column.py  (+1 more)
chart/: Chart.yaml  values.yaml
docker/: docker-compose.yaml  docker-compose_2.yaml  docker-compose_pytest.yaml  public.pem
docker/api/: pytest.sh  (+7 more)
docs/: conf.py  index.rst  requirements.txt
labenv/: Vagrantfile
src/: .coveragerc  .stignore  cnaas.sql  conftest.py  mypy.ini  public.pem  requirements2.txt
test/: cleanup.sh  integrationtests.py  integrationtests.sh  start.sh
venv_old/: readme.md
(+216 files in other folders)
