[tool.poetry]
name = "cnaas-nms"
version = "1.0"
description = ""
authors = ["Johan M"]
[tool.isort]
profile="black"
line_length = 120
skip = ["venv"]

[tool.black]
line-length = 120
target-version = ["py37", ]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
  )/
)
'''
